added homepage link to the jobs page

--- a/jobs.html
+++ b/jobs.html
@@ -24,7 +24,7 @@
 <div id="header">
     <div class="row-main">
         <h1 id="logo">
-            <img width="71" height="47" src="./images/logo-goldee-02.png" alt="Logo"/><strong>Goldee</strong>
+          <a href="./index.html"> <img width="71" height="47" src="./images/logo-goldee-02.png" alt="Logo"/><strong>Goldee</strong></a> 
         </h1>
 
         <div id="menu-main">
