--- a/index.html
+++ b/index.html
@@ -479,22 +479,8 @@
                 <ul class="links">
                     
                     <li>
-                        <a href="./privacy.html" class="iubenda-nostyle no-brand iubenda-embed link" title="Privacy Policy">Privacy Policy</a>
+                        <a href="./privacy.html" title="Privacy Policy">Privacy Policy</a>
                       
-                      <script type="text/javascript">(function (w, d) {
-                            var loader = function () {
-                                var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0];
-                                s.src = "./iubenda.js";
-                                tag.parentNode.insertBefore(s, tag);
-                            };
-                            if (w.addEventListener) {
-                                w.addEventListener("load", loader, false);
-                            } else if (w.attachEvent) {
-                                w.attachEvent("onload", loader);
-                            } else {
-                                w.onload = loader;
-                            }
-                        })(window, document);</script>
                     </li>
                     <li>
                         <a href="#legal" class="link legal">Legal</a>
